# fcitx5-android-1

./: IMPLEMENTATION_PLAN.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/schemas/org.fcitx.fcitx5.android.data.clipboard.db.ClipboardDatabase/: 5.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni-utils.h  native-lib.cpp
app/src/main/java/org/fcitx/fcitx5/android/: FcitxRemoteService.kt
app/src/main/java/org/fcitx/fcitx5/android/core/: AddonSubconfig.kt
app/src/main/java/org/fcitx/fcitx5/android/data/: InputFeedbacks.kt
app/src/main/java/org/fcitx/fcitx5/android/data/clipboard/: ClipboardManager.kt  ClipboardMediaCache.kt
app/src/main/java/org/fcitx/fcitx5/android/data/prefs/: AppPrefs.kt
app/src/main/java/org/fcitx/fcitx5/android/data/theme/: ThemePreset.kt
app/src/main/java/org/fcitx/fcitx5/android/input/: FcitxInputMethodService.kt  InputView.kt  QuickSettingsUi.kt
app/src/main/java/org/fcitx/fcitx5/android/input/bar/: KawaiiBarComponent.kt
app/src/main/java/org/fcitx/fcitx5/android/input/broadcast/: InputBroadcaster.kt
app/src/main/java/org/fcitx/fcitx5/android/input/clipboard/: ClipboardAdapter.kt  ClipboardEntryUi.kt  ClipboardUi.kt  ClipboardWindow.kt
app/src/main/java/org/fcitx/fcitx5/android/input/keyboard/: BaseKeyboard.kt  CommonKeyActionListener.kt  CustomGestureView.kt  KeyAction.kt  KeyDefPreset.kt  KeyDrawable.kt  KeyView.kt  SpaceLongPressBehavior.kt  SwipeTrailView.kt  TextKeyboard.kt
app/src/main/java/org/fcitx/fcitx5/android/utils/: RecyclerView.kt
app/src/main/res/anim/: ime_enter.xml  ime_exit.xml
app/src/main/res/drawable/: ic_baseline_swap_horiz_24.xml  ic_translate_24.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/org/fcitx/fcitx5/android/: ClipboardMediaCacheTest.kt  ClipboardTest.kt  ThemeSerializationTest.kt  TranslateTest.kt
gradle/: libs.versions.toml
lib/sherpa-onnx/: build.gradle.kts
(+36 files in other folders)
